--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,3 +5,6 @@
 @import "components/component-2/index.scss";
 @import "components/component-3/index.scss";
 @import "components/component-4/index.scss";
+@import "components/component-5/index.scss";
+@import "components/component-6/index.scss";
+@import "components/component-7/index.scss";
