--- a/styles/palette.scss
+++ b/styles/palette.scss
@@ -4,3 +4,5 @@ $btn-color: #3AB6B2;
 $icon-bg:#3B3B3B;
 $title-color: #323232;
 $text-color: #6A6A6A;
+$black-color: black;
+$color-for-footer: #111111;
