add imamges to components

--- a/styles/components/component-2/base.scss
+++ b/styles/components/component-2/base.scss
@@ -1,7 +1,7 @@
 .component2{
-    background-image: url("images/component2/backgroud.jpg");
-    background-color: #292929;
     width: 100%;
+    background-image: url("https://i.pinimg.com/originals/a8/31/21/a831216301d0ac0253a0638b44ac05c8.png");
+    background-size: cover;
     
     .fa-angle-left{
         font-size: 75px;
