--- a/styles/components/component-5/base.scss
+++ b/styles/components/component-5/base.scss
@@ -1,4 +1,51 @@
 .component5{
   width: 100%;
   background-color: $white-color;
+  .picture-1{
+    background-image: url("https://www.advancedsciencenews.com/wp-content/uploads/2020/01/brett-ritchie-1vKTnwLMdqs-unsplash1.jpg");
+    background-size: cover;
+}
+.picture-2{
+    background-image: url("https://ae01.alicdn.com/kf/Hecf14936b9744a288cb37a7539b0e991P/Lyavshi-Universe-Galaxy-Space-Backdrop-Party-Background-Galaxy-Backdrop-Photo-Booth-Nebula-Astronomy-Planets-Backdrops.jpg_960x960.jpg");
+    background-size: cover;
+}
+.picture-3{
+    background-image: url("https://cdn.wallpapersafari.com/65/1/ybw1D4.jpg");
+    background-size: cover;
+}
+.picture-4{
+    background-image: url("https://p0.pikist.com/photos/502/689/galaxy-starry-sky-night-sky-star-night-sky-space-universe-astronomy.jpg");
+    background-size: cover;
+    background-position: center;
+}
+.picture-5{
+    background-image: url("https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX3855221.jpg");
+    background-size: cover;
+    background-position: center;
+}
+.picture-6{
+    background-image: url("https://i.pinimg.com/originals/95/76/c9/9576c9cad54635b0cf0d886570c46730.jpg");
+    background-size: cover;
+    background-position: center;
+}
+.picture-7{
+    background-image: url("https://wallpaperaccess.com/full/724398.jpg");
+    background-size: cover;
+    background-position: center;
+}
+.picture-8{
+  background-image: url("https://wallpaperaccess.com/full/1767349.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.picture-9{
+  background-image: url("https://lh3.googleusercontent.com/proxy/_BkCDUXtcpUe_2XtflhXhLwDkRRviDmri3CvwL6esSNT10-4GSNqn_q0GExvKfXnYI8vWmG6krj6-iJtmYlOX0xGiAqCapEgGYMwmpYfKcaWdEFJBpdilZNIcvo");
+  background-size: cover;
+  background-position: center;
+}
+.picture-10{
+  background-image: url("https://cutewallpaper.org/21/free-space-background/Free-Images-astrology,-astronomy,-background-image,-dark-.jpg");
+  background-size: cover;
+  background-position: center;
+}
 }
