--- a/styles/components/component-5/tablet.scss
+++ b/styles/components/component-5/tablet.scss
@@ -57,11 +57,11 @@
 
                     .project-contact {
                         width: 100%;
-                        height: 71%;
+                        height: 73%;
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        background-color: #292929;
+                        background-color: rgb(105,105,105,0.4);
 
                         a {
                             text-decoration: none;
@@ -96,7 +96,7 @@
                     .project-content {
                         display: block;
                         width: 100%;
-                        height: 25%;
+                        height: 30%;
                         background-color: black;
                         display: grid;
                         align-content: space-evenly;
