--- a/styles/components/component-5/tablet.scss
+++ b/styles/components/component-5/tablet.scss
@@ -71,7 +71,9 @@
                         .project-see-more {
                             margin-right: 10px;
                         }
-
+                        .hidden-wrapp{
+                            display: none;
+                        }
                         .project-url {
                             display: flex;
                             width: 36px;
