--- a/styles/components/component-6/desktop-x-large.scss
+++ b/styles/components/component-6/desktop-x-large.scss
@@ -1,16 +1,16 @@
 @media only screen and (min-width:1025px) and (max-width: 1920px) {
     .component6 {
-        margin-bottom: 120px;
-
+        height: 890px ;
         .header-wrapper {
             margin: auto;
             text-align: center;
-            padding-top: 100px;
+            padding-top: 80px;
             margin-bottom: 80px;
 
             .portfolio {
                 color: $title-color;
                 font-size: 31px;
+                font-weight: 500;
                 padding-bottom: 10px;
             }
         }
@@ -28,7 +28,7 @@
             justify-items: center;
             text-align: center;
             color: #606060;
-            max-width: 760px;
+            max-width: 950px;
 
             .location {
                 .icon {
@@ -36,7 +36,7 @@
                 }
 
                 i {
-                    color: #39b6b2;
+                    color: $btn-color;
                     font-size: 46px;
                 }
             }
@@ -47,7 +47,7 @@
                 }
 
                 i {
-                    color: #39b6b2;
+                    color: $btn-color;
                     font-size: 30px;
                 }
             }
@@ -58,7 +58,7 @@
                 }
 
                 i {
-                    color: #39b6b2;
+                    color: $btn-color;
                     font-size: 38px;
                 }
             }
@@ -69,6 +69,7 @@
             }
 
             p {
+                font-size: 15px;
                 margin-top: 10px;
             }
         }
@@ -76,7 +77,7 @@
         .contact-form {
             margin: auto;
             margin-top: 80px;
-            max-width: 950px;
+            max-width: 955px;
 
             input {
                 width: 100%;
@@ -85,11 +86,19 @@
                 margin-bottom: 15px;
                 outline: none;
             }
-
+            textarea{
+            margin-bottom: 15px;    
+            padding: 20px;
+            width: 100%;
+            height: 170px;
+            font-size: 15px;
+            outline: none;
+            }
             .form-group {
+                width: 100%;
                 display: grid;
                 grid-template-columns: 1fr 1fr;
-                grid-column-gap: 20px;
+                grid-column-gap: 12px;
             }
 
             .submit-btn {
@@ -99,9 +108,9 @@
                 button {
                     display: block;
                     width: 160px;
-                    height: 45px;
-                    background: #39b6b2;
-                    color: white;
+                    height: 42px;
+                    background:$btn-color;
+                    color: $white-color;
                     text-transform: uppercase;
                     outline: 0;
                     box-shadow: none;
